--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
     "antd": "^4.4.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "connected-react-router": "^6.8.0",
+    "history": "^5.0.0",
+    "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.1",
-    "reactstrap": "^8.5.1"
+    "reactstrap": "^8.5.1",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
